[package]
name = "iter-debug"
version = "1.0.0"
edition = "2021"
authors = ["1e1001"]
description = "impl Debug for iterators using a wrapper"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["iterator", "debug"]
categories = ["development-tools::debugging", "no-std::no-alloc", "rust-patterns"]
documentation = "https://docs.rs/iter-debug"
homepage = "https://github.com/1e1001/iter-debug"
repository = "https://github.com/1e1001/iter-debug"

# these lints are just copied off of another project, maybe this list should be cleaned up at some point
[lints.rust]
missing_docs = "deny"

[lints.clippy]
# pedantic
pedantic = {level = "warn", priority = -1}
must_use_candidate = "allow"
missing_errors_doc = "allow"

# restriction
alloc_instead_of_core = "warn"
as_underscore = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
min_ident_chars = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
tests_outside_test_module = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unseparated_literal_suffix = "warn"
