[package]
name = "iter-debug"
version = "1.0.2"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "impl Debug for iterators using a wrapper"
readme = "README.md"
keywords = ["iterator", "debug"]
categories = ["development-tools::debugging", "no-std::no-alloc", "rust-patterns"]
documentation = "https://docs.rs/iter-debug"
homepage = "https://github.com/1e1001/rsutil/tree/main/iter-debug"
repository = "https://github.com/1e1001/rsutil/tree/main/iter-debug"

[lints]
workspace = true
