[package]
name = "just-kdl"
version = "0.2.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Small streaming KDL parser"
readme = "README.md"
keywords = ["document", "kdl", "serialization"]
categories = ["parser-implementations", "config", "encoding"]
documentation = "https://docs.rs/just-kdl"
homepage = "https://github.com/1e1001/rsutil/tree/main/just-kdl"
repository = "https://github.com/1e1001/rsutil/tree/main/just-kdl"

[dependencies.thiserror]
version = "2.0.11"
default-features = false

[dependencies.smol_str]
version = "0.3.4"
default-features = false

[dependencies.hashbrown]
version = "0.16.1"

[features]
default = ["std"]
# I don't use either crate's std features
std = []

# For testing compliance & performance
[dev-dependencies.kdl]
version = "6.3.4"

[lints]
workspace = true
