[package]
name = "miny"
version = "2.0.3"
edition = "2021"
authors = ["1e1001"]
description = "Box<T> with small value optimization"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["box", "dst", "stack"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/miny"
homepage = "https://github.com/1e1001/rsutil/tree/main/miny"
repository = "https://github.com/1e1001/rsutil/tree/main/miny"

# impl Allocative for Miny
[dependencies.allocative]
version = "0.3.4"
optional = true

[lints]
workspace = true
