[package]
name = "miny"
version = "2.1.0"
edition = "2021"
authors.workspace = true
description = "Box<T> with small value optimization"
license.workspace = true
readme = "README.md"
keywords = ["box", "dst", "stack"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/miny"
homepage = "https://github.com/1e1001/rsutil/tree/main/miny"
repository = "https://github.com/1e1001/rsutil/tree/main/miny"

# impl Allocative for Miny
[dependencies.allocative]
version = "0.3.4"
optional = true

[lints]
workspace = true
