[package]
name = "multiline-logger"
version = "0.2.1"
edition = "2021"
authors = ["1e1001"]
description = "Personal logger implementation"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["log", "logger"]
categories = ["value-formatting", "development-tools::debugging"]
documentation = "https://docs.rs/multiline-logger"
homepage = "https://github.com/1e1001/rsutil/tree/main/multiline-logger"
repository = "https://github.com/1e1001/rsutil/tree/main/multiline-logger"

# common
[dependencies.log]
version = "0.4.25"
[dependencies.time]
version = "0.3.37"
features = ["local-offset"]
# wasm-specific
[target.'cfg(target_arch="wasm32")'.dependencies.time]
version = "0.3.37"
features = ["local-offset", "wasm-bindgen"]
[target.'cfg(target_arch="wasm32")'.dependencies.wasm-bindgen]
version = "0.2.100"
# native-specific
[target.'cfg(not(target_arch="wasm32"))'.dependencies.termcolor]
version = "1.4.1"
[target.'cfg(not(target_arch="wasm32"))'.dependencies.backtrace]
version = "0.3.74"
optional = true
[target.'cfg(not(target_arch="wasm32"))'.dependencies.color-backtrace]
version = "0.7.0"
optional = true
# windows-specific
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = ["Win32_Foundation", "Win32_System_Console"]

[features]
# TODO: consider a wasm-bindgen/"web" feature? makes the dependencies look more shitty (since some dependencies are intersections)

# enable backtrace capturing
backtrace = ["dep:backtrace", "dep:color-backtrace"]

[lints]
workspace = true
