[package]
name = "punch-card"
version = "1.2.0"
edition = "2021"
authors = ["1e1001"]
description = "Punched cards in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["joke", "literals", "const"]
categories = ["visualization", "no-std::no-alloc"]
documentation = "https://docs.rs/punch-card"
homepage = "https://github.com/1e1001/rsutil/tree/main/punch-card"
repository = "https://github.com/1e1001/rsutil/tree/main/punch-card"

[lints]
workspace = true
