[package]
name = "punch-card"
version = "1.2.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Punched cards in Rust"
readme = "README.md"
keywords = ["joke", "literals", "const"]
categories = ["visualization", "no-std::no-alloc"]
documentation = "https://docs.rs/punch-card"
homepage = "https://github.com/1e1001/rsutil/tree/main/punch-card"
repository = "https://github.com/1e1001/rsutil/tree/main/punch-card"

[lints]
workspace = true
